# StormKit

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md
cmake/: C++.cmake  (+6 more)
core/: CMakeLists.txt  Configure.hpp.in
core/cmake/: StormKitCoreConfig.cmake.in
core/include/storm/core/: Any.hpp  App.hpp  Assert.hpp  CRTP.hpp  Execution.hpp  Filesystem.hpp  Flags.hpp  Hash.hpp  Iterator.hpp  Memory.hpp  NamedType.hpp  NonCopyable.hpp  NonInstanciable.hpp  NonMovable.hpp  Numerics.hpp  Pimpl.hpp  Pimpl.tpp  Platform.hpp  Singleton.hpp  Strings.hpp  Timer.hpp  Timer.tpp  TypeTraits.hpp  Types.hpp
engine/: CMakeLists.txt  HardwareBufferImpl.inl  OpenGLBackend.cmake  VulkanBackend.cmake
engine/cmake/: StormKitEngine-VulkanConfig.cmake.in
engine/examples/01 - Triangle/: CMakeLists.txt
engine/examples/01 - Triangle/shaders/: triangle.vert
engine/examples/01 - Triangle/src/: main.cpp
engine/examples/02 - VertexBuffer/: CMakeLists.txt
engine/examples/02 - VertexBuffer/shaders/: vertexbuffer_spv.vert
engine/examples/02 - VertexBuffer/src/: main.cpp
engine/examples/03 - IndexBuffer/: CMakeLists.txt
engine/examples/03 - IndexBuffer/src/: main.cpp
engine/examples/04 - UniformBuffer/: CMakeLists.txt
engine/examples/04 - UniformBuffer/shaders/: uniformbuffer.vert  uniformbuffer_spv.vert
engine/examples/04 - UniformBuffer/src/: main.cpp
engine/examples/05 - Texture/: CMakeLists.txt
engine/examples/05 - Texture/shaders/: texture.frag  texture.vert  texture_spv.frag  texture_spv.vert
engine/examples/05 - Texture/src/: main.cpp
engine/examples/06 - DepthBuffer/: CMakeLists.txt
engine/examples/06 - DepthBuffer/shaders/: depthbuffer.vert  depthbuffer_spv.vert
engine/examples/06 - DepthBuffer/src/: main.cpp
engine/examples/07 - Obj/: CMakeLists.txt
engine/examples/07 - Obj/shaders/: obj_spv.frag  obj_spv.vert
engine/examples/07 - Obj/src/: main.cpp
engine/include/storm/engine/: Renderer.hpp
engine/src/_b/: DirectionalLightNode.cpp  GeoInstancedNode.cpp  GeoNode.cpp  GroupNode.cpp  MaterialNode.cpp  Node.cpp  ProgramNode.cpp  SceneGraph.cpp  SceneNode.cpp  TransformNode.cpp  ViewNode.cpp
engine/src/graphics/: DeferredRenderer.cpp  DirectionalLight.cpp  DrawableCache.cpp  ForwardRenderer.cpp  Hashes.cpp  ImagePool.cpp  Material.cpp  MeshList.cpp  ProgramPool.cpp  RenderGraph.cpp  RenderTaskBase.cpp  RenderTaskBuilder.cpp  Renderer.cpp  Resource.cpp  ResourceBase.cpp  ResourcePool.cpp  ShaderLibrary.cpp  ShaderLibrary.inl  Shaders.hpp  Transform.cpp
engine/src/graphics/backup/: RenderGraph.cpp  RenderTaskBase.cpp  RenderTaskBuilder.cpp  Renderer.cpp  Resource.cpp  ResourceBase.cpp  ResourcePool.cpp
engine/src/graphics/shaders/: compile.sh  forward_render.frag  forward_render.vert  forward_render_src.vert
engine/src/render/: CommandBuffer.cpp  Context.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  HardwareBuffer.cpp  Hashes.cpp  IndexBuffer.cpp  PhysicalDevice.cpp  Program.cpp  RenderPass.cpp  Semaphore.cpp  Shader.cpp  Surface.cpp  Texture.cpp  UniformBuffer.cpp  VertexBuffer.cpp
engine/src/scenegraph/: CameraNode.cpp  DefaultRenderTaskData.hpp  DirectionalLightNode.cpp  GeometryNode.cpp  GroupNode.cpp  Scene.cpp  SceneGraph.cpp  SceneNode.cpp  SceneRenderer.cpp  SceneTree.cpp  TransformNode.cpp  ViewNode.cpp
engine/src/scenegraph/private/: DirtyDefs.hpp  SceneTree.cpp  SceneTree.hpp
engine/src/vulkan/: CommandBufferImpl.cpp  ContextImpl.cpp  DeviceImpl.cpp  FenceImpl.cpp  FramebufferImpl.cpp  HardwareBufferImpl.cpp  IndexBufferImpl.cpp  PhysicalDeviceImpl.cpp  PipelineCache.cpp  ProgramImpl.cpp  RenderPassImpl.cpp  SemaphoreImpl.cpp  ShaderImpl.cpp  SurfaceImpl.cpp  SwapChain.cpp  TextureImpl.cpp  TypeConversions.cpp  UniformBufferImpl.cpp  Utils.cpp  VertexBufferImpl.cpp
engine/src/vulkan/shaders/: DefaultFrag2D.hpp  DefaultShaders.hpp  DefaultVert2D.hpp  default_frag_2D.frag  default_vert_2D.vert
entities/: CMakeLists.txt
entities/cmake/: StormKitEntitiesConfig.cmake.in
entities/include/storm/entities/: Component.hpp  Entity.hpp  EntityManager.hpp  EntityManager.tpp  System.hpp
entities/src/: EntityManager.cpp  System.cpp
eventbus/: CMakeLists.txt
eventbus/cmake/: StormKitEventbusConfig.cmake.in
eventbus/include/storm/eventbus/: EventBus.hpp  EventBus.tpp
image/: CMakeLists.txt
image/cmake/: StormKitImageConfig.cmake.in
image/include/storm/image/: Image.hpp
image/src/: Image.cpp
image/src/private/: ImageData.hpp  ImageLoader.cpp  ImageLoader.hpp
log/: CMakeLists.txt
log/cmake/: StormKitLogConfig.cmake.in
log/include/storm/log/: ConsoleOutput.hpp  FileOutput.hpp  LogOutput.hpp
log/src/: ConsoleOutput.cpp  FileOutput.cpp  LogOutput.cpp
reflection/: CMakeLists.txt
reflection/cmake/: StormKitReflectionConfig.cmake.in
reflection/include/storm/reflection/: Exceptions.hpp  Function.hpp  FunctionBase.hpp  ReflectableManager.hpp  Reflection.hpp
sharedobject/: CMakeLists.txt
sharedobject/cmake/: StormKitSharedObjectConfig.cmake.in
sharedobject/include/storm/sharedobject/: SharedLibrary.hpp
sharedobject/src/: SharedLibrary.cpp
switch_controller/: CMakeLists.txt
switch_controller/src/: Controller.cpp  HIDDevice.cpp
tools/: CMakeLists.txt
tools/python-wrapper/: Wrapper.cpp  WrapperState.cpp  WrapperState.hpp  WrapperTree.cpp  WrapperTree.hpp
tools/src/: Observer.cpp  State.cpp  StateManager.cpp  Tree.cpp  TreeNode.cpp
window/: CMakeLists.txt
window/cmake/: StormKitWindowConfig.cmake.in
window/examples/hello_window/: CMakeLists.txt
window/src/: AbstractWindow.cpp  Window.cpp
window/src/macOS/: AutoReleasePoolWrapper.h  AutoReleasePoolWrapper.mm  StormApplication.h  StormApplication.m  StormApplicationDelegate.h  StormApplicationDelegate.m  StormView.h  StormView.mm  StormWindow.h  StormWindow.m  StormWindowController.h  StormWindowController.mm  Utils.h  Utils.mm  WindowImpl.h  WindowImpl.mm
window/src/wayland/: WindowImpl.cpp  WindowImpl.hpp
window/src/win32/: WindowImpl.cpp  WindowImpl.hpp
window/src/x11/: Utils.cpp  Utils.hpp  WindowImpl.cpp  WindowImpl.hpp
(+193 files in other folders)
