project(stormkit-switch-controller CXX)

find_package(HIDAPI REQUIRED)

file(GLOB STORM_SWITCH_CONTROLLER_HEADER_FILES include/storm/switch-controller/*.hpp include/storm/switch-controller/*.tpp)
file(GLOB STORM_SWITCH_CONTROLLER_SOURCES_FILES src/*.cpp)

list(FILTER STORM_SWITCH_CONTROLLER_HEADER_FILES EXCLUDE REGEX "^\\..+")
list(FILTER STORM_SWITCH_CONTROLLER_SOURCES_FILES EXCLUDE REGEX "^\\..+")

add_library(${PROJECT_NAME} ${STORM_LIBRARY_TYPE} ${STORM_SWITCH_CONTROLLER_HEADER_FILES} ${STORM_SWITCH_CONTROLLER_SOURCES_FILES})
target_link_libraries(
	${PROJECT_NAME}
	${HIDAPI_LIBRARY}
	stormkit-log
)

STORM_CXX17(${PROJECT_NAME})
STORM_APPEND_PREFIX_AND_SUFFIX(${PROJECT_NAME})
STORM_SET_BASE_DEFINITIONS(${PROJECT_NAME})

target_compile_definitions(${PROJECT_NAME} PUBLIC "STORM_BUILD")
